--- a/bingo 1-3/index.html
+++ b/bingo 1-3/index.html
@@ -2,7 +2,7 @@
 <html lang="eg">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device, intial-scale=1.0">
+        <meta name="viewpoint" content="width=device, initial-scale=1.0">
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
@@ -14,15 +14,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
 
         </script>
-        <style>
-            body {
-                background-color: yellowgreen;
-            }
-        </style>
     </head>
     <body>
         <div class="table-responsive" style="text-align: center;">
-            <table class="table table-bordered text-center-hover">
+            <table class="table table-bordered text-center table-hover">
                 <thead>
                     <th><h1>B</h1></th>
                     <th><h1>I</h1></th>
@@ -33,44 +28,45 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>44</td>
-                        <td>88</td>
-                        <td>22</td>
-                        <td>99</td>
+                        <td id ="td1">2</td>
+                        <td id ="td2">18</td>
+                        <td id ="td3">35</td>
+                        <td id ="td4">55</td>
+                        <td id ="td5">73</td>
                     </tr>
                     <tr>
-                        <td>10</td>
-                        <td>13</td>
-                        <td>33</td>
-                        <td>51</td>
-                        <td>71</td>
+                        <td id ="td6">11</td>
+                        <td id ="td7">17</td>
+                        <td id ="td8">34</td>
+                        <td id ="td9">52</td>
+                        <td id ="td10">71</td>
                     </tr>
                     <tr>
-                        <td>4</td>
-                        <td>21</td>
-                        <td>NIGGA</td>
-                        <td>45</td>
-                        <td>65</td>
+                        <td id="td11">3</td>
+                        <td id="td12">20</td>
+                        <td id="td13">31</td>
+                        <td id="td14">46</td>
+                        <td id="td15">66</td>
+
+                        </td>
                     </tr>
                     <tr>
-                        <td>19</td>
-                        <td>34</td>
-                        <td>43</td>
-                        <td>89</td>
-                        <td>67</td>
+                        <td id="td16">15</td>
+                        <td id="td17">30</td>
+                        <td id="td18">40</td>
+                        <td id="td19">60</td>
+                        <td id="td120">68</td>
                     </tr>
                     <tr>
-                        <td>10</td>
-                        <td>77</td>
-                        <td>00</td>
-                        <td>58</td>
-                        <td>60</td>
+                        <td id="td21">9</td>
+                        <td id="td22">23</td>
+                        <td id="td23">44</td>
+                        <td id="td24">59</td>
+                        <td id="td25">69</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </body>
-    <script src="C:\xampp\htdocs\Malipot\index.js"></script>
-
+    <script src="./index.js"></script>
 </html>
