Added Second Bingoo

--- a/bingo 1-3/index.html
+++ b/bingo 1-3/index.html
@@ -24,7 +24,7 @@
                     <th><h1>N</h1></th>
                     <th><h1>G</h1></th>
                     <th><h1>O</h1></th>
-                    
+
                 </thead>
                 <tbody>
                     <tr>
@@ -52,20 +52,23 @@
                     </tr>
                     <tr>
                         <td id="td16">15</td>
-                        <td id="td17">30</td>
-                        <td id="td18">40</td>
-                        <td id="td19">60</td>
-                        <td id="td120">68</td>
+                        <td id="td17">21</td>
+                        <td id="td18">32</td>
+                        <td id="td19">47</td>
+                        <td id="td120">67</td>
                     </tr>
                     <tr>
                         <td id="td21">9</td>
                         <td id="td22">23</td>
-                        <td id="td23">44</td>
-                        <td id="td24">59</td>
-                        <td id="td25">69</td>
+                        <td id="td23">33</td>
+                        <td id="td24">47</td>
+                        <td id="td25">68</td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div id="button">
+            <button onclick="getRandomNum()">Random Number</button>
         </div>
     </body>
     <script src="./index.js"></script>
